Fix: Delete tap box on Mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -243,6 +243,12 @@ video {
     box-shadow: none;
 }
 
+
+button, a, input, textarea {
+    -webkit-tap-highlight-color: transparent;
+}
+
+
 /* Vertical */
 @media (max-width: 768px) {
     ::-webkit-scrollbar {
